<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_gray"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/name_game"
            android:textAlignment="center"
            android:textColor="@color/chinese_black"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/vhod"
        android:textColor="@color/chinese_black"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnSignIn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>